--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,19 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "bitwasp/secp256k1-php": "^0.2.0",
         "guzzlehttp/guzzle": "^7.2",
         "hexters/coinpayment": "^3.0",
+        "kornrunner/keccak": "^1.1",
+        "kornrunner/secp256k1": "^0.3.0",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.1",
-        "simplesoftwareio/simple-qrcode": "^4.2"
+        "mdanter/ecc": "^1.0",
+        "phpseclib/phpseclib": "^3.0",
+        "simplesoftwareio/simple-qrcode": "^4.2",
+        "simplito/elliptic-php": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
